added from line 362

--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -360,20 +360,22 @@ footer {
 
 <script type="text/javascript">
 $(document).ready(function() {
+    get_next_qn();
+
     // Check if 'r' is present in the search part of the URL
-    if (location.search.indexOf('r') >= 0) {
-        // 'r' is present, proceed to get the next question
-        get_next_qn();
-    } else {
-        // 'r' is not present, modify the URL to include 'r' and then get the next question
-        var hash = window.location.hash;
-        var loc = window.location.href.replace(hash, '');
+    if (location.search.indexOf('r') < 0) {
+        var loc = window.location.href;
+
+        // Append 'r' to the URL either with '?' or '&'
         loc += (loc.indexOf('?') < 0 ? '?' : '&') + 'r';
+
+        // Redirect to the modified URL after a brief delay
         setTimeout(function() {
-            window.location.href = loc + hash;
+            window.location.href = loc;
         }, 100);
     }
 });
+
 
 </script>
 
