--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -368,7 +368,7 @@ footer {
         var hash = window.location.hash;
          var loc = window.location.href.replace(hash, '');
 
-         loc += (loc.indexOf('?') < 0? '?' : '&') + 'r';
+         loc=loc + (loc.indexOf('?') < 0? '?' : '&') + 'r';
          setTimeout(function(){window.location.href = loc + hash;}, 100);
       } 
     
