--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -379,7 +379,7 @@ footer {
     var txt;
     if (confirm("Are Your Sure Want To Quit!")) {
       txt = "You pressed OK!";
-      window.location ='examsummary.html';
+      window.location.assign('examsummary.html');
     } else {
       txt = "You pressed Cancel!";
     }
