quit function modified 04

--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -379,7 +379,8 @@ footer {
     var txt;
     if (confirm("Are Your Sure Want To Quit!")) {
       txt = "You pressed OK!";
-      document.location.assign(document.location.origin + "/examsummary.html");
+      location.assign(location.origin + "/examsummary.html")
+      // document.location.assign(document.location.origin + "/examsummary.html");
     } else {
       txt = "You pressed Cancel!";
     }
