quit function assign in all file

--- a/Extract Folder/Questions.html
+++ b/Extract Folder/Questions.html
@@ -1126,17 +1126,17 @@ function secondstohms(seconds)
  
 
 <script>
-function quit() {
-  var txt;
-  if (confirm("Are Your Sure Want To Quit!")) {
-    txt = "You pressed OK!";
-    window.location.href ='examsummary.html';
-  } else {
-    txt = "You pressed Cancel!";
+  function quit() {
+    var txt;
+    if (confirm("Are Your Sure Want To Quit!")) {
+      txt = "You pressed OK!";
+      location.assign(location.origin + "/examsummary.html")
+      // document.location.assign(document.location.origin + "/examsummary.html");
+    } else {
+      txt = "You pressed Cancel!";
+    }
   }
- 
-}
-</script>
+  </script>
 
 
 
