--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -379,8 +379,7 @@ footer {
     var txt;
     if (confirm("Are Your Sure Want To Quit!")) {
       txt = "You pressed OK!";
-      location.assign(location.origin + "/examsummary.html")
-      // document.location.assign(document.location.origin + "/examsummary.html");
+      window.location.replace("examsummary.html");
     } else {
       txt = "You pressed Cancel!";
     }
