--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -379,6 +379,7 @@ footer {
     var txt;
     if (confirm("Are Your Sure Want To Quit!")) {
       txt = "You pressed OK!";
+      alert('you sure');
       window.location.replace("examsummary.html");
     } else {
       txt = "You pressed Cancel!";
