--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -379,8 +379,7 @@ footer {
     var quitConfirmation = confirm("Are you sure you want to quit? Your progress will be lost.");
 
     if (quitConfirmation) {
-        // Redirect to examsummary.html
-        window.location.href = "examsummary.html";
+       window.location.href ="examsummary.html";
     }
 }
   </script>
@@ -388,7 +387,7 @@ footer {
 <script type="text/javascript">
   function check()
       {
-            window.location.replace("timer1.html");
+        window.location.href="timer1.html";
       }
   </script>
 
