--- a/Questions.html
+++ b/Questions.html
@@ -349,25 +349,20 @@ option {
   </script>
 <script>
   function quit() {
-    var txt;
-    if (confirm("Are Your Sure Want To Quit!")) {
-      txt = "You pressed OK!";
-      location.assign(location.origin + "/examsummary.html")
-      // document.location.assign(document.location.origin + "/examsummary.html");
-    } else {
-      txt = "You pressed Cancel!";
-    }
-  }
-  </script>
-
-<script type="text/javascript">
-
-  function check()
-      {
-            window.location.replace("timer1.html");
-      }
-  
-  </script>
+     var quitConfirmation = confirm("Are you sure you want to quit? Your progress will be lost.");
+ 
+     if (quitConfirmation) {
+        window.location.href ="examsummary.html";
+     }
+ }
+   </script>
+ 
+ <script type="text/javascript">
+   function check()
+       {
+         window.location.href="timer1.html";
+       }
+   </script>
 
 
 <!-- face recognition background -->
