--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -238,8 +238,8 @@ footer {
 		<ul class="nav navbar-nav" style="display: flex;align-items: center;justify-content:space-around;">
 		  <li ><a href="#"><img src="img/toyota_logo.png" width="66px" height="28px" style="margin-top:5px;margin-left:12px;"></a></li>
       <li ><a href="#" style="color:white;font-size:15px;margin-top: 8px;">Assessment</a></li>
-      <li id="toggle" style="list-style-type: none;"> <a href="#" onclick="check()"  style="color: white;text-decoration: none;"><img src="img1/pause.png"><p>Pause</p></a></li>
-      <li style="list-style-type: none;"> <a href="#"  onclick="quit()" style="color: white;text-decoration: none;"><img src="img1/quit.png"><p><span>Quit</span></p></a></li>
+      <li id="toggle" style="list-style-type: none;"> <a href="" onclick="check()"  style="color: white;text-decoration: none;"><img src="img1/pause.png"><p>Pause</p></a></li>
+      <li style="list-style-type: none;"> <a href=""  onclick="quit()" style="color: white;text-decoration: none;"><img src="img1/quit.png"><p><span>Quit</span></p></a></li>
     </ul>
 	  </div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
@@ -376,31 +376,10 @@ footer {
 
 <script>
  function quit() {
-    var quitConfirmation = confirm("Are you sure you want to quit? Your progress will be lost.");
+    var quitConfirmation = confirm("Are you sure you want to quit!");
 
     if (quitConfirmation) {
-      url="examsummary.html"
-      function windowLocation(url){
-    var X = setTimeout(function(){
-        window.location.replace(url);
-        return true;
-    },300);
-
-    if( window.location = url ){
-        clearTimeout(X);
-        return true;
-    } else {
-        if( window.location.href = url ){
-            clearTimeout(X);
-            return true;
-        }else{
-            clearTimeout(X);
-            window.location.replace(url);
-            return true;
-        }
-    }
-    return false;
-};
+       window.location.href ="examsummary.html";
     }
 }
   </script>
