# removed in questions

--- a/Questions.html
+++ b/Questions.html
@@ -188,8 +188,8 @@ option {
         </ul>
  <ul class="navbar-nav navbar-right">
  
-<li id="toggle" style="list-style-type: none;"><a href="#" onclick="check()"   style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/pause.png" style="margin-top: 14px;padding-left: 11px;"><p style="padding-right: 15px">Pause</p></a></li>
-<li style="list-style-type: none;"><a href="#" onclick="quit()"    style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/quit.png" style="margin-top: 14px;margin-left: 15px;text-decoration: none;"><p style="padding-left: 10px;"><span>Quit</span></p></a></li>
+<li id="toggle" style="list-style-type: none;"><a href="" onclick="check()"   style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/pause.png" style="margin-top: 14px;padding-left: 11px;"><p style="padding-right: 15px">Pause</p></a></li>
+<li style="list-style-type: none;"><a href="" onclick="quit()"    style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/quit.png" style="margin-top: 14px;margin-left: 15px;text-decoration: none;"><p style="padding-left: 10px;"><span>Quit</span></p></a></li>
 
 
 </ul>
