--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -375,19 +375,22 @@ footer {
   </script>
 
 <script>
- function quit() {
-    var quitConfirmation = confirm("Are you sure you want to quit!");
-
-    if (quitConfirmation) {
-       window.location.href ="examsummary.html";
+  function quit() {
+    var txt;
+    if (confirm("Are Your Sure Want To Quit!")) {
+      txt = "You pressed OK!";
+      alert("you sure")
+      window.location.replace("examsummary.html");
+    } else {
+      txt = "You pressed Cancel!";
     }
-}
+  }
   </script>
 
 <script type="text/javascript">
   function check()
       {
-        window.location.href="timer1.html";
+            window.location.replace("timer1.html");
       }
   </script>
 
