--- a/Questions.html
+++ b/Questions.html
@@ -170,7 +170,7 @@ option {
 </style>
 </head>
 
-<body onkeydown="AltDown();" onload="initCountdown">
+<body onkeydown="AltDown();" onload="initCountdown()">
 
 <!-- HEADER STARTS -->
 
