--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -238,8 +238,8 @@ footer {
 		<ul class="nav navbar-nav" style="display: flex;align-items: center;justify-content:space-around;">
 		  <li ><a href="#"><img src="img/toyota_logo.png" width="66px" height="28px" style="margin-top:5px;margin-left:12px;"></a></li>
       <li ><a href="#" style="color:white;font-size:15px;margin-top: 8px;">Assessment</a></li>
-      <li id="toggle" style="list-style-type: none;"> <a href="" onclick="check()"  style="color: white;text-decoration: none;"><img src="img1/pause.png"><p>Pause</p></a></li>
-      <li style="list-style-type: none;"> <a href=""  onclick="quit()" style="color: white;text-decoration: none;"><img src="img1/quit.png"><p><span>Quit</span></p></a></li>
+      <li id="toggle" style="list-style-type: none;"> <a href="/timer1.html" onclick="check()"  style="color: white;text-decoration: none;"><img src="img1/pause.png"><p>Pause</p></a></li>
+      <li style="list-style-type: none;"> <a href="/examsummary.html"  onclick="quit()" style="color: white;text-decoration: none;"><img src="img1/quit.png"><p><span>Quit</span></p></a></li>
     </ul>
 	  </div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
