--- a/facedetection.html
+++ b/facedetection.html
@@ -102,7 +102,7 @@
 	  <!-- Collect the nav links, forms, and other content for toggling -->
 	  <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="nav navbar-nav">
-		  <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" width="80px;height:30px"></a></li>
+		  <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:5px;margin-left:7px;width:80px;height: 30px"></a></li>
 		  <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Face Recognition</a></li>
 		  <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
 		</ul>
