--- a/Profile.html
+++ b/Profile.html
@@ -201,7 +201,7 @@ button + button {
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" width="68px;height:20px"></a></li>
+        <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-15px;width:140px;height: 95px"></a></li>
         <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Profile</a></li>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
       </ul>
