TOYOTA IMAGE WORKING

--- a/Questions.html
+++ b/Questions.html
@@ -174,7 +174,7 @@ option {
 
 <!-- HEADER STARTS -->
 
-<nav class="navbar navbar-default" style="background-color: #ED1B26;">
+<nav class="navbar navbar-default" id="abc" style="background-color: #ED1B26;">
     <div class="container-fluid">
     
       <div id="navbar" class="navbar-collapse collapse">
