--- a/facedetection.html
+++ b/facedetection.html
@@ -16,14 +16,14 @@
 <style>
 
 
-#abc
+/* #abc
  {
  
  background-image : url('img/toyota_logo.png') ;
   background-repeat:no-repeat;
   height: 57px;  
  
- } 
+ }  */
  
  
 .navbar-nav.navbar-center {
@@ -102,7 +102,7 @@
 	  <!-- Collect the nav links, forms, and other content for toggling -->
 	  <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="nav navbar-nav">
-		  <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-93px;width:207px;height:64px"></a></li>
+		  <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-90px;width:207px;height:61px"></a></li>
 		  <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Face Recognition</a></li>
 		  <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
 		</ul>
