--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -230,7 +230,7 @@ footer {
 
 <!-- HEADER STARTS -->
 
-<nav class="navbar navbar-default" role="navigation" style="background-color:#ED1B26">
+<nav class="navbar navbar-default" role="navigation" id="abc" style="background-color:#ED1B26">
 	<div class="container">
 	  <!-- Brand and toggle get grouped for better mobile display -->	 
 	  <!-- Collect the nav links, forms, and other content for toggling -->
