--- a/examsummary.html
+++ b/examsummary.html
@@ -100,14 +100,14 @@ h4{
 
 
 
-  <nav class="navbar navbar-default" role="navigation" style="background-color:#ED1B26">
+  <nav class="navbar navbar-default" role="navigation" id="abc" style="background-color:#ED1B26">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
      
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="pull-left"><a href="#"><img src="img/toyota_logo.png"  style="margin-top:-13px;margin-left:-47px;width:207px;height:59px"></a></li>
+        <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png"  style="margin-top:-14px;margin-left:-69px;width:200px;height:60px"></a></li> -->
         <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Exam Summary</a></li>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
       </ul>
