TOYOTA IMAGE WORKING

--- a/timer1.html
+++ b/timer1.html
@@ -68,14 +68,14 @@
 </head>
  <body>
  
-<nav class="navbar navbar-default" role="navigation" style="background-color:#ED1B26">
+<nav class="navbar navbar-default" role="navigation" id="abc" style="background-color:#ED1B26">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
    
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li>
+      <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
       <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;margin-right: 50px;">Break</a></li>
       <li class="social pull-right" style="display: none;"><a href="#">Social Links</a></li>
     </ul>
