--- a/facedetection.html
+++ b/facedetection.html
@@ -16,14 +16,14 @@
 <style>
 
 
-/* #abc
+#abc
  {
  
  background-image : url('img/toyota_logo.png') ;
   background-repeat:no-repeat;
   height: 57px;  
  
- }  */
+ } 
  
  
 .navbar-nav.navbar-center {
@@ -95,14 +95,14 @@
 <body>
 
 
- <nav class="navbar navbar-default" role="navigation" style="background-color:#ED1B26">
+ <nav class="navbar navbar-default" role="navigation" id="abc" style="background-color:#ED1B26">
 	<div class="container">
 	  <!-- Brand and toggle get grouped for better mobile display -->
 	 
 	  <!-- Collect the nav links, forms, and other content for toggling -->
 	  <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="nav navbar-nav">
-		  <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-90px;width:207px;height:61px"></a></li>
+		  <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-90px;width:207px;height:61px"></a></li> -->
 		  <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Face Recognition</a></li>
 		  <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
 		</ul>
