TOYOTA IMAGE WORKING

--- a/facedetection.html
+++ b/facedetection.html
@@ -91,11 +91,13 @@
 }
 @media (max-width: 767px) {
     .brand-logo {
-      text-align: center;
+      text-align:left;
     }
 
     .brand-logo li {
-      display: block;
+      display: inline;
+      font-size: 30px;
+      margin-left: 20px;
     }
   }
 
