TOYOTA IMAGE WORKING

--- a/facedetection.html
+++ b/facedetection.html
@@ -91,13 +91,13 @@
 }
 @media (max-width: 767px) {
     .brand-logo {
-      text-align:left;
+      text-align:center;
     }
 
     .brand-logo li {
-      display: inline;
+      display: block;
       font-size: 30px;
-      margin-left: 20px;
+      /* margin-left: 20px; */
     }
   }
 
