--- a/facedetection.html
+++ b/facedetection.html
@@ -97,7 +97,7 @@
     .brand-logo li {
       display: block;
       font-size: 30px;
-      /* margin-left: 20px; */
+      margin-left: 50%;
     }
   }
 
