--- a/profileerror.html
+++ b/profileerror.html
@@ -45,6 +45,17 @@
   .navbar {
     height: 60px;
 }
+@media (max-width: 767px) {
+    .brand-logo {
+      text-align:center;
+    }
+
+    .brand-logo li {
+      display: block;
+      font-size: 30px;
+      margin-left: 50%;
+    }
+  }
 
 </style>
 
@@ -60,7 +71,9 @@
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-90px;width:220px;height: 63px"></a></li> -->
-        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Profile Error</a></li>
+        <div class="brand-logo">
+          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Profile Error</a></li>
+        </div>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li> 
       </ul>
       </div><!-- /.navbar-collapse -->
