--- a/malpractice.html
+++ b/malpractice.html
@@ -32,6 +32,11 @@
 .navbar-toggle {
     z-index:3;
 }
+@media (max-width: 767px){
+  .navbar-brand{
+    margin-left: 8%;
+  }
+}
 
 </style>
 
@@ -46,6 +51,7 @@
       <span class="icon-bar"></span>
     </button>    
     <a class="navbar-brand" href="#" style="color: white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Error</a>
+    
   </div>
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav navbar-left" >
