--- a/exam_select.html
+++ b/exam_select.html
@@ -142,7 +142,17 @@
   .navbar {
     height: 60px;
 }
+@media (max-width: 767px) {
+    .brand-logo {
+      text-align:center;
+    }
 
+    .brand-logo li {
+      display: block;
+      font-size: 30px;
+      margin-left: 50%;
+    }
+  }
 
 </style>
 
@@ -159,7 +169,9 @@
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
+        <div class="brand-logo">
         <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Exam List</a></li>
+        </div> 
         <li class="social pull-right" ><a href="Profile.html" style="color: white;font-family:Calibri regular;"><img src="img/back.png" style="width: 32px;height: 22px;"></a></li>
       </ul>
       </div><!-- /.navbar-collapse -->
