--- a/exam_select.html
+++ b/exam_select.html
@@ -152,6 +152,9 @@
       font-size: 30px;
       margin-left: 50%;
     }
+    .back-button{
+        margin-top: 30px;
+    }
   }
 
 </style>
@@ -172,8 +175,10 @@
         <div class="brand-logo">
         <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Exam List</a></li>
         </div> 
-        <li class="social pull-right" ><a href="Profile.html" style="color: white;font-family:Calibri regular;"><img src="img/back.png" style="width: 32px;height: 22px;"></a></li>
-      </ul>
+        <div class="back-button">
+        <li class="social pull-right" ><a href="Profile.html" style="color: white;font-family:Calibri regular;"><img src="img/back.png" style="width: 32px;height: 22px; margin-top: 20px;"></a></li>
+      </div>
+    </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
