--- a/examsummary.html
+++ b/examsummary.html
@@ -88,7 +88,14 @@ h4{
   .navbar {
     height: 60px;
 }
-
+@media (max-width: 767px) {
+  .examsummary{
+    text-align:center;
+  }
+  .examsummary li{
+    
+  }
+}
 
 </style>
 
@@ -108,7 +115,7 @@ h4{
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png"  style="margin-top:-14px;margin-left:-69px;width:200px;height:60px"></a></li> -->
-        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Exam Summary</a></li>
+        <div class="examsummary"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Exam Summary</a></li></div>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
       </ul>
       </div><!-- /.navbar-collapse -->
