--- a/facedetection1.html
+++ b/facedetection1.html
@@ -90,7 +90,7 @@
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px) {
+@media (max-width: 767px)and (min-resolution: 326px) {
     .brand-logo {
       text-align:center;
     }
