--- a/facedetection.html
+++ b/facedetection.html
@@ -89,15 +89,15 @@
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px)and (min-resolution: 326dpi) {
+@media (max-width: 767px)and (min-width: 326px) {
     .brand-logo {
       text-align:center;
     }
 
     .brand-logo li {
       display: block;
-      font-size: 30px;
-      margin-left: 50%;
+      font-size: 15px;
+      margin-left: 60%;
     }
   }
 
