--- a/Profile.html
+++ b/Profile.html
@@ -196,15 +196,15 @@ button + button {
     background-repeat:no-repeat;
     
  } 
- @media (max-width: 767px) {
+ @media (max-width: 767px) and (min-width:326px) {
     .brand-logo {
       text-align:center;
     }
 
     .brand-logo li {
       display: block;
-      font-size: 30px;
-      margin-left: 40%;
+      font-size: 18px;
+      margin-left:132px;
     }
   }
 
