--- a/examsummary.html
+++ b/examsummary.html
@@ -88,12 +88,14 @@ h4{
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px) {
+@media (max-width: 767px) and (min-width:326px) {
   .examsummary{
     text-align:center;
   }
   .examsummary li{
-    
+      display: block;
+      font-size: 18px;
+      margin-left:132px;
   }
 }
 
