--- a/malpractice.html
+++ b/malpractice.html
@@ -32,9 +32,10 @@
 .navbar-toggle {
     z-index:3;
 }
-@media (max-width: 767px){
+@media (max-width: 767px) and (min-width:326px){
   .navbar-brand{
-    margin-left: 8%;
+    font-size: 18px;
+    margin-left:132px;
   }
 }
 
