--- a/profileerror.html
+++ b/profileerror.html
@@ -45,15 +45,15 @@
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px) {
+@media (max-width: 767px) and (min-width) {
     .brand-logo {
       text-align:center;
     }
 
     .brand-logo li {
       display: block;
-      font-size: 30px;
-      margin-left: 40%;
+      font-size: 18px;
+      margin-left:132px;
     }
   }
 
