--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -220,9 +220,10 @@ footer {
   justify-content: center;
   /* gap: 5px; */
 }
-@media (max-width: 767px) {
+@media (max-width: 767px) and (min-width:326px) {
   .assessment{
-    margin-left: 183px;
+    margin-left: 187px;
+    margin-top: -10px;
   }
 }
 </style>
