--- a/exam_select.html
+++ b/exam_select.html
@@ -149,8 +149,8 @@
 
     .brand-logo li {
       display: block;
-      font-size: 30px;
-      margin-left: 50%;
+      font-size: 18px;
+      margin-left:132px;
     }
     .back-button{
         margin-top: 30px;
