--- a/facedetection.html
+++ b/facedetection.html
@@ -96,8 +96,8 @@
 
     .brand-logo li {
       display: block;
-      font-size: 9px;
-      margin-left: 50%;
+      font-size: 18px;
+      margin-left:132px;
     }
   }
 
