--- a/instructions.html
+++ b/instructions.html
@@ -111,8 +111,8 @@ canvas {
 
     .brand-logo li {
       display: block;
-      font-size: 30px;
-      margin-left: 50%;
+      font-size: 18px;
+      margin-left:132px;
     }
   }
  
