--- a/facedetection.html
+++ b/facedetection.html
@@ -89,7 +89,7 @@
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px)and (min-width: 326px) {
+@media (max-width: 767px)and (min-resolution: 326ppi){
     .brand-logo {
       text-align:center;
     }
