--- a/instructions.html
+++ b/instructions.html
@@ -104,7 +104,7 @@ canvas {
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px) {
+@media (max-width: 767px)and (min-resolution: 326ppi){
     .brand-logo {
       text-align:center;
     }
