--- a/exam_select.html
+++ b/exam_select.html
@@ -142,7 +142,7 @@
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px) {
+@media (max-width: 767px)and (min-resolution: 326ppi){
     .brand-logo {
       text-align:center;
     }
