--- a/profileerror.html
+++ b/profileerror.html
@@ -45,7 +45,7 @@
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px) and (min-width) {
+@media (max-width: 767px)and (min-resolution: 326ppi) {
     .brand-logo {
       text-align:center;
     }
