--- a/facedetection.html
+++ b/facedetection.html
@@ -97,7 +97,7 @@
     .brand-logo li {
       display: block;
       font-size: 18px;
-      margin: left 150px;
+      margin-left:150px;
     }
   }
 
