--- a/malpractice.html
+++ b/malpractice.html
@@ -32,7 +32,7 @@
 .navbar-toggle {
     z-index:3;
 }
-@media (max-width: 767px)and (min-resolution: 326ppi){
+@media (max-width:326px){
   .navbar-brand{
     font-size: 18px;
     margin-left:150px;
