--- a/profileerror.html
+++ b/profileerror.html
@@ -45,7 +45,7 @@
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px)and (min-resolution: 326ppi) {
+@media (max-width: 326px){
     .brand-logo {
       text-align:center;
     }
@@ -72,7 +72,7 @@
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-90px;width:220px;height: 63px"></a></li> -->
         <div class="brand-logo">
-          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 18px;">Profile Error</a></li>
+          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 22px;">Profile Error</a></li>
         </div>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li> 
       </ul>
