--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -220,7 +220,7 @@ footer {
   justify-content: center;
   /* gap: 5px; */
 }
-@media (max-width: 767px)and (min-resolution: 326ppi) {
+@media (max-width: 326px){
   .assessment{
     margin-left: 187px;
     margin-top: -10px;
