--- a/Profile.html
+++ b/Profile.html
@@ -196,7 +196,7 @@ button + button {
     background-repeat:no-repeat;
     
  } 
- @media (max-width: 767px)and (min-resolution: 326ppi) {
+ @media (max-width: 326px){
     .brand-logo {
       text-align:center;
     }
