--- a/examsummary.html
+++ b/examsummary.html
@@ -88,7 +88,7 @@ h4{
   .navbar {
     height: 60px;
 }
-@media (max-width: 767px) and (min-width:326px) {
+@media (max-width:326px){
   .examsummary{
     text-align:center;
   }
