--- a/malpractice.html
+++ b/malpractice.html
@@ -32,10 +32,10 @@
 .navbar-toggle {
     z-index:3;
 }
-@media (max-width:326px){
+@media (min-width: 326px) and (max-width: 767px) {
   .navbar-brand{
-    font-size: 18px;
-    margin-left:150px;
+    font-size: 12px;
+      margin-left:187px;
   }
 }
 
