--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -220,7 +220,7 @@ footer {
   justify-content: center;
   /* gap: 5px; */
 }
-@media (max-width: 326px){
+@media (min-width: 326px) and (max-width: 767px) {
   .assessment{
     margin-left: 187px;
     margin-top: -10px;
