--- a/Profile.html
+++ b/Profile.html
@@ -196,15 +196,15 @@ button + button {
     background-repeat:no-repeat;
     
  } 
- @media (max-width: 326px){
+ @media (min-width: 326px) and (max-width: 767px) {
     .brand-logo {
       text-align:center;
     }
 
     .brand-logo li {
       display: block;
-      font-size: 18px;
-      margin-left:150px;
+      font-size: 12px;
+      margin-left:187px;
     }
   }
 
