--- a/examsummary.html
+++ b/examsummary.html
@@ -88,14 +88,14 @@ h4{
   .navbar {
     height: 60px;
 }
-@media (max-width:326px){
+@media (min-width: 326px) and (max-width: 767px) {
   .examsummary{
     text-align:center;
   }
   .examsummary li{
       display: block;
-      font-size: 18px;
-      margin-left:150px;
+      font-size: 12px;
+      margin-left:187px;
   }
 }
 
