--- a/instructions.html
+++ b/instructions.html
@@ -104,15 +104,15 @@ canvas {
   .navbar {
     height: 60px;
 }
-@media (max-width: 326px){
+@media (min-width: 326px) and (max-width: 767px) {
     .brand-logo {
       text-align:center;
     }
 
     .brand-logo li {
       display: block;
-      font-size: 18px;
-      margin-left:150px;
+      font-size: 12px;
+      margin-left:187px;
     }
   }
  
