--- a/facedetection1.html
+++ b/facedetection1.html
@@ -96,9 +96,9 @@
     }
 
     .brand-logo li {
-      display: block;
+      display: inline-block;
       font-size: 5px;
-      margin-left:160px;
+      margin-left:140px;
     }
   }
 
