--- a/facedetection.html
+++ b/facedetection.html
@@ -95,9 +95,9 @@
     }
 
     .brand-logo li {
-      display: block;
-      font-size: 2px;
-      margin-left:160px;
+      display: inline-block;
+      font-size: 5px;
+      margin-left:140px;
     }
   }
 
