--- a/facedetection.html
+++ b/facedetection.html
@@ -96,8 +96,8 @@
 
     .brand-logo li {
       display: inline-block;
-      font-size: 5px;
-      margin-left:140px;
+      font-size: 50%;
+      margin-left:145px;
     }
   }
 
