--- a/profileerror.html
+++ b/profileerror.html
@@ -52,8 +52,8 @@
 
     .brand-logo li {
       display: block;
-      font-size: 12px;
-      margin-left:120px;
+      font-size: 50%;
+      margin-left:140px;
     }
   }
 
