--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -222,7 +222,9 @@ footer {
 }
 @media (min-width: 326px) and (max-width: 767px) {
   .assessment{
-    margin-left: 248px;
+    margin-bottom: 33px;
+    margin-left: 211px;
+    margin-right: -19px;
   }
 }
 </style>
