--- a/timer1.html
+++ b/timer1.html
@@ -62,11 +62,11 @@
     height: 60px;
 }
 @media (min-width: 326px) and (max-width: 767px) {
-    .brand-logo {
+    .timer{
       text-align:center;
     }
 
-    .brand-logo li {
+    .timer li{
       display: block;
       margin-left:140px;
     }
