--- a/TimeOutError.html
+++ b/TimeOutError.html
@@ -54,7 +54,16 @@
   .navbar {
     height: 60px;
 }
+@media (min-width: 326px) and (max-width: 767px) {
+    .timeError{
+      text-align:center;
+    }
 
+    .timeError li {
+      display: block;
+      margin-left:140px;
+    }
+  }
 </style>
 
 </head>
@@ -68,7 +77,7 @@
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
-        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Error</a></li>
+        <div class="timeError"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px;">Error</a></li></div>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
       </ul>
       </div><!-- /.navbar-collapse -->
