--- a/TwoFaceError.html
+++ b/TwoFaceError.html
@@ -45,7 +45,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>    
-    <a class="navbar-brand" href="#" style="color: white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;">Error</a>
+    <a class="navbar-brand" href="#" style="color: white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center;">Error</a>
   </div>
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav navbar-left" >
