--- a/facedetection1.html
+++ b/facedetection1.html
@@ -106,7 +106,7 @@
 <body>
 
 
- <nav class="navbar navbar-default" role="navigation" style="background-color:#ED1B26">
+ <nav class="navbar navbar-default" role="navigation" id="abc" style="background-color:#ED1B26">
 	<div class="container">
 	  <!-- Brand and toggle get grouped for better mobile display -->
 	 
@@ -115,7 +115,7 @@
 		<ul class="nav navbar-nav">
 		  <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:61px"></a></li> -->
       <div class="brand-logo">
-        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 18px;">Face Recognition</a></li>
+        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 18px;text-align: center;">Face Recognition</a></li>
       </div>
 		  <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
 		</ul>
