--- a/Profile.html
+++ b/Profile.html
@@ -218,7 +218,7 @@ button + button {
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png"   style="margin-top:-15px;margin-left:-90px;width:207px;height:61px"></a></li> -->
         <div class="brand-logo">
-          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;">Profile</a></li>
+          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center;">Profile</a></li>
         </div>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
       </ul>
