--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -245,7 +245,7 @@ footer {
 		  <!-- <li ><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
       <div class="assessment"><li ><a href="#" style="color:white;font-size:15px;margin-top:6px;">Assessment</a></li></div>
       <li id="toggle" style="list-style-type: none;"> <a href="/timer1.html" onclick="check()"  style="color: white;text-decoration: none;"><img src="img1/pause.png"><p>Pause</p></a></li>
-      <li style="list-style-type: none;"> <a href="/examsummary.html"  onclick="quit()" style="color: white;text-decoration: none;"><img src="img1/quit.png"><p><span>Quit</span></p></a></li>
+      <li style="list-style-type: none;"> <a href="#"  onclick="quit()" style="color: white;text-decoration: none;"><img src="img1/quit.png"><p><span>Quit</span></p></a></li>
     </ul>
 	  </div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
@@ -382,13 +382,13 @@ footer {
 
 <script>
   function quit() {
-    if (confirm("Are Your Sure Want To Quit!")) {
+    if (confirm("Are you sure you want to quit?")) {
       window.location.replace("examsummary.html");
     } else {
-      txt = "You pressed Cancel!";
+      // If the user clicks on Cancel, do nothing
     }
   }
-  </script>
+</script>
 
 <script type="text/javascript">
   function check()
